--- a/.cloud/jenkins/Jenkinsfile
+++ b/.cloud/jenkins/Jenkinsfile
@@ -43,7 +43,7 @@ pipeline {
         //     steps {
         //         // Output will be something like "go version go1.19 darwin/arm64"
         //         // sh 'make push'
-        //         sh 'docker push ceherzog/codeclarity.io:latest'
+        //         sh 'docker push codeclarityce/codeclarity.io:latest'
         //     }
         // }
     }
