Add php-sbom submodule and update .gitmodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "services/scheduler"]
 	path = services/scheduler
 	url = git@github.com:CodeClarityCE/service-scheduler.git
+[submodule "plugins/php-sbom"]
+	path = plugins/php-sbom
+	url = https://github.com/CodeClarityCE/plugin-sbom-php
